tests/snapshots/list_recipes__missing_file.snap
---
source: tests/list_recipes.rs
expression: normalized_stderr
---
Error: Not in a nutrition calculator workspace (or any parent directory)
Searched: [TEMP_DIR]/broken, [TEMP_DIR], /tmp, /
Run 'nutriterm init' to create a workspace.
