tests/snapshots/list_recipes__no_workspace.snap
---
source: tests/list_recipes.rs
expression: stderr
---
Error: Not in a nutrition calculator workspace (or any parent directory)
Searched: /tmp, /
Run 'nutriterm init' to create a workspace.
