tests/snapshots/list_recipes__schema_duplicate_recipe_names.snap
---
source: tests/list_recipes.rs
expression: normalized_stderr
---
Error: Duplicate recipe name found in recipes.jsonc:
Duplicate recipe name 'rice-bowl' found:
  - "First rice bowl recipe"
  - "Second rice bowl recipe (duplicate name)"

Tip: Each recipe name must be unique. Rename the duplicates to use different values.
