tests/snapshots/list_recipes__schema_ingredients_excessive_values.snap
---
source: tests/list_recipes.rs
expression: normalized_stderr
---
Error: Schema validation failed for ingredients.jsonc:
- /ingredients/0/protein_per_100g: 150 is greater than the maximum of 100

Tip: Check the values against the expected data types and ranges. Use 'nutriterm init' to see example file formats.
