tests/snapshots/list_recipes__schema_multiple_duplicate_pairs.snap
---
source: tests/list_recipes.rs
expression: normalized_stderr
---
Error: Duplicate ingredient ID found in ingredients.jsonc:
Duplicate ingredient ID 'chicken' found:
  - Chicken Breast (skinless)
  - Chicken Thigh (with skin)

Duplicate ingredient ID 'rice' found:
  - White Rice
  - Brown Rice

Tip: Each ingredient ID must be unique. Rename the duplicates to use different values.
