tests/snapshots/list_recipes__schema_multiple_errors.snap
---
source: tests/list_recipes.rs
expression: normalized_stderr
---
Error: Schema validation failed for ingredients.jsonc:
- /ingredients/0/carbs_per_100g: -10 is less than the minimum of 0
- /ingredients/0/fat_per_100g: -5 is less than the minimum of 0
- /ingredients/0/fiber_per_100g: 150 is greater than the maximum of 100
- /ingredients/0/protein_per_100g: 200 is greater than the maximum of 100

Tip: Check the values against the expected data types and ranges. Use 'nutriterm init' to see example file formats.
