tests/snapshots/list_recipes__schema_recipes_zero_grams.snap
---
source: tests/list_recipes.rs
expression: normalized_stderr
---
Error: Schema validation failed for recipes.jsonc:
- /recipes/0/ingredients/0/grams: 0 is less than or equal to the minimum of 0

Tip: Check the values against the expected data types and ranges. Use 'nutriterm init' to see example file formats.
